# RIDOA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.py  project_structure.txt  requirements_gui.txt  ridoa_gui.py  setup.py
cmake/: RIDOAConfig.cmake.in
ridoa/: __init__.py
ridoa/core/: CMakeLists.txt
ridoa/core/bindings/: pybind_module.cpp
ridoa/core/include/: array_processing.h  doa_config.h  doa_result.h  doa_system.h  music_algorithm.h  parameter_space.h  phase_matrix.h  types.h
ridoa/core/include/cuda/: cuda_helper.cuh  music_cuda.cuh  parameter_cuda.cuh
ridoa/core/include/hip/: hip_helper.hip  music_hip.hip  parameter_hip.hip
ridoa/core/src/cpp/: array_processing.cpp  doa_system.cpp  music_algorithm.cpp  parameter_space.cpp  phase_matrix.cpp
ridoa/core/src/cuda/: music_cuda.cu  parameter_cuda.cu
ridoa/core/src/hip/: music_hip.cpp  parameter_hip.cpp
